Fixed nav bar spacing on mobile

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -158,14 +158,14 @@ pre
         width: 88%
 
     .content
-        padding-top: 40px
+        padding-top: 20px
 
 @media #{$tablet}
     .wrapper-normal, .wrapper-large
         width: 88%
 
 .content
-    padding-top: 80px // Adjust this to match the height of your navigation bar
+    padding-top: 40px
 
 
 .back-to-top
